Add configuration to device schema
